// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Layout /> when authenticated is false matches snapshot when authenticated is false 1`] = `
<section
  class="ant-layout layout"
  data-testid="layout-element"
>
  <header
    class="ant-layout-header header"
    data-testid="header"
  >
    <img
      class="logo"
      data-testid="header-logo"
      src="logo.png"
    />
    <span
      class="title"
      data-testid="header-title"
    >
      Flamingo
    </span>
    <div
      class="flagContainer"
      data-testid="header-flag-container"
    />
  </header>
  <main
    class="ant-layout-content content"
  />
</section>
`;

exports[`<Layout /> when authenticated is true matches snapshot when authenticated is true 1`] = `
<section
  class="ant-layout layout"
  data-testid="layout-element"
>
  <header
    class="ant-layout-header header"
    data-testid="header"
  >
    <img
      class="logo"
      data-testid="header-logo"
      src="logo.png"
    />
    <span
      class="title"
      data-testid="header-title"
    >
      Flamingo
    </span>
    <div
      class="flagContainer"
      data-testid="header-flag-container"
    />
    <div
      class="menu"
    >
      <ul
        class="ant-menu-overflow ant-menu ant-menu-root ant-menu-horizontal ant-menu-dark"
        data-menu-list="true"
        data-testid="main-menu"
        role="menu"
        style="width: 512px;"
        tabindex="0"
      />
      <div
        aria-hidden="true"
        style="display: none;"
      />
    </div>
    <div
      class="divider"
    />
    <div
      class="userName"
    >
      <span
        aria-label="user"
        class="anticon anticon-user userIcon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="user"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
          />
        </svg>
      </span>
      Test
    </div>
    <div
      class="logoutButton"
    >
      <button
        class="ant-btn ant-btn-background-ghost"
        data-testid="logout-button-wrapper"
        type="button"
      >
        <span>
          Log Out
        </span>
      </button>
    </div>
  </header>
  <main
    class="ant-layout-content content"
  />
</section>
`;
